hphp/hack/test/typecheck/is_expression/talias4.php.like_types.exp
File "talias4.php", line 6, characters 13-15:
Invalid "is" expression hint (Typing[4195])
File "talias4.php", line 6, characters 13-15:
The "is" operator cannot be used with a union
